worked on the signin logic a bit
